--- a/JobPortal/templates/navbar.html
+++ b/JobPortal/templates/navbar.html
@@ -22,5 +22,6 @@
       {% else %}
           <span ><a class="user" href="{% url 'login' %}">Login</a></span>>
           <span ><a class="user" href="{% url 'register' %}">Register</a></span>>
-      {% endif  %}
+          <span ><a class="user" href="{% url 'postjob' %}">Post a Job</a></span>>
+      {% endif  
     </nav>
